# ug

./: .gitignore  CMakeLists.txt  README.md  resizing_event_problem.md
assets/shaders/: color_phong_fragment.glsl  color_phong_vertex.glsl  default_fragment.glsl  default_vertex.glsl  flat_fragment.glsl  flat_vertex.glsl  shaded_color_fragment.glsl  shaded_color_vertex.glsl
src/: App.cpp  App.h  CMakeLists.txt  Camera.cpp  Camera.h  DeltaTimer.cpp  DeltaTimer.h  DumbPairHash.h  InputController.cpp  InputController.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  PerspectiveCamera.cpp  PerspectiveCamera.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  main.cpp
tmp/: gpugems9.cpp
